# sup-rs

./: .gitignore  Cargo.toml
src/: lib.rs  run.rs
src/config/: config.rs  error.rs  mod.rs
src/controller/: client.rs  command.rs  controller.rs  error.rs  mod.rs  server.rs
src/process/: client.rs  command.proto  command_grpc.rs  controller.rs  error.rs  mod.rs  server.rs
src/rotater/: error.rs  mod.rs  rotater.rs
src/run/: error.rs  mod.rs  threads.rs
sup-client/: Cargo.toml
sup-lib/: Cargo.toml
sup-server/: Cargo.toml
test/config/: config.toml
