[package]
name = "sup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bus = "2.3.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-utils = "0.8.12"
env_logger = "0.9.1"
log = "0.4.17"
num_cpus = "1.14.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
thiserror = "1.0.37"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
